--- a/Meetio.html
+++ b/Meetio.html
@@ -1,12 +1,29 @@
 <head>
+
   <title>Meetio</title>
   <base href="/">
+
+  <!--Import materialize.css-->
+  	  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+  <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 </head>
 
 <body ng-app="meetio">
 
+	<div class="top-bar">
+		<p>hej och välkommen</p>
+	</div>
+
 	  <div ui-view></div>
 
+<!--Import jQuery before materialize.js-->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
+
+<!-- NOTES BELOW -->
 <!-- http://angular-meteor.com/tutorials/angular1/routing-and-multiple-views -->
